# microkernel-rs

./: .claudeprompt  .cursorrules  .gitignore  AGENTS.md  Cargo.toml  design.md
.agents/: AGENTS.md
.agents/skills/git-conventional-commit/: SKILL.md
.agents/skills/git-conventional-commit/agents/: openai.yaml
.github/: copilot-instructions.md
docs/ai/: .rules.md
docs/architecture/: directory_structure.md  generic_apps.md  graph.md  microkernel.md
docs/examples/: database_app.md  user_auth_plugin.md
docs/requirements/: core.md
host/: Cargo.toml
host/src/: builder.rs  env.rs  main.rs
kernel/contracts/: Cargo.toml
kernel/contracts/src/: lib.rs
kernel/contracts/src/env/: mod.rs  system_env.rs
kernel/contracts/src/errors/: app_error.rs  kernel_error.rs  mod.rs
kernel/contracts/src/lifecycle/: archetype.rs  mod.rs  plugin.rs
kernel/contracts/src/ports/: auth.rs  cache.rs  database.rs  logger.rs  mod.rs  rbac.rs  storage.rs
kernel/core/: Cargo.toml
kernel/core/src/: lib.rs
kernel/core/src/env/: builder.rs  mod.rs
kernel/core/src/event_bus/: dispatcher.rs  mod.rs
kernel/core/src/lifecycle/: bootstrap.rs  mod.rs  teardown.rs
kernel/macros/: Cargo.toml
kernel/macros/src/: lib.rs
systems/data_plane/cache_app/: Cargo.toml
systems/data_plane/cache_app/src/: lib.rs
systems/data_plane/cache_app/src/config/: mod.rs  options.rs
systems/data_plane/cache_app/src/error/: cache_error.rs  mod.rs
systems/data_plane/cache_app/src/lifecycle/: post_create.rs  post_mount.rs  post_stop.rs  pre_create.rs  pre_mount.rs  pre_stop.rs
systems/data_plane/cache_app/src/port/: impl.rs  mod.rs
systems/data_plane/database_app/: Cargo.toml
systems/data_plane/database_app/src/: lib.rs
systems/data_plane/database_app/src/config/: mod.rs  options.rs
systems/data_plane/database_app/src/error/: db_error.rs  mod.rs
systems/data_plane/database_app/src/lifecycle/: post_create.rs  post_mount.rs  post_stop.rs  pre_create.rs  pre_mount.rs  pre_stop.rs
systems/data_plane/database_app/src/port/: impl.rs  mod.rs
systems/data_plane/storage_app/: Cargo.toml
systems/data_plane/storage_app/src/: lib.rs
systems/data_plane/storage_app/src/config/: mod.rs  options.rs
systems/data_plane/storage_app/src/error/: mod.rs  storage_error.rs
systems/data_plane/storage_app/src/lifecycle/: mod.rs  post_create.rs  post_mount.rs  post_stop.rs  pre_create.rs  pre_mount.rs  pre_stop.rs
systems/data_plane/storage_app/src/port/: impl.rs  mod.rs
systems/data_plane/storage_app/src/provider/: local_impl.rs  mod.rs  s3_impl.rs
systems/identity_access/auth_plugin/: Cargo.toml
systems/identity_access/auth_plugin/src/: config.rs  lib.rs  port.rs
systems/identity_access/mfa_plugin/: Cargo.toml
systems/identity_access/mfa_plugin/src/: config.rs  lib.rs  port.rs
systems/identity_access/rbac_plugin/: Cargo.toml
systems/identity_access/rbac_plugin/src/: config.rs  lib.rs  port.rs
systems/observability/logger_app/: Cargo.toml
systems/observability/logger_app/src/: lib.rs
systems/observability/logger_app/src/config/: mod.rs
systems/observability/logger_app/src/lifecycle/: post_create.rs  post_mount.rs  post_stop.rs  pre_create.rs  pre_mount.rs  pre_stop.rs
systems/observability/logger_app/src/port/: mod.rs
systems/observability/metrics_plugin/: Cargo.toml
systems/observability/metrics_plugin/src/: config.rs  lib.rs  port.rs
