[package]
name        = "microkernel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Microkernel engine: lifecycle orchestration, environment builder, and event bus"

[dependencies]
microkernel-contracts = { workspace = true }

tokio       = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
