[package]
name        = "microkernel-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for the microkernel system (e.g., #[derive(Plugin)])"

[lib]
proc-macro = true

[dependencies]
microkernel-contracts = { workspace = true }
proc-macro2 = { workspace = true }
syn         = { workspace = true }
quote       = { workspace = true }
