[package]
name        = "microkernel-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JWT authentication Business Plugin (jsonwebtoken + zeroize)"

[dependencies]
microkernel-contracts = { workspace = true }
jsonwebtoken = { workspace = true }
zeroize      = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
microkernel-macros = { version = "0.1.0", path = "../../../kernel/macros" }
