[package]
name        = "microkernel-mfa"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-factor authentication Business Plugin (totp-rs + qrcode)"

[dependencies]
microkernel-contracts = { workspace = true }
totp-rs   = { workspace = true }
qrcode    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
serde     = { workspace = true }
microkernel-macros = { version = "0.1.0", path = "../../../kernel/macros" }
