[package]
name        = "microkernel-logger"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Structured async logging Generic App (tracing + rolling file appender)"

[dependencies]
microkernel-contracts = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
tracing-appender     = { workspace = true }
thiserror            = { workspace = true }
serde                = { workspace = true }
